--- a/src/main/resources/templates/buyproduct.html
+++ b/src/main/resources/templates/buyproduct.html
@@ -53,7 +53,7 @@ td button.active {
 	color: white;
 }
 
-.tablecat{
+.whitebg{
 	/* margin: 80pt 10% 0 10%; */
 	width: 100%;
 	background-color: white;
@@ -160,7 +160,7 @@ font-family: 'Bai Jamjuree', sans-serif;
 	</tr>
 </table>
 
-<table id="shirt" class="tablecat" style="display: block;">
+<table id="shirt" class="whitebg" style="display: block;">
 	<tr class="sep" th:if="${cat != null}">
 		<td>
 			<p>รายละเอียดเพิ่มเติม </p>
