--- a/src/main/resources/templates/packing.html
+++ b/src/main/resources/templates/packing.html
@@ -150,6 +150,9 @@ function offdetail() {
 </script>
 </head>
 <body>
+	<input type="file">
+
+<!-- 
 	<div class="sellerheader center">จัดส่งแล้ว </div>
 	<a href="/firstpage" class="back"><</a>
 	<!-- List order from database -->
@@ -185,6 +188,6 @@ function offdetail() {
 			</td>
 		</tr>
 		</table>
-	</details>
+	</details> -->
 </body>
 </html>
