--- a/src/main/resources/templates/buytransfer.html
+++ b/src/main/resources/templates/buytransfer.html
@@ -16,8 +16,7 @@
 
 body{
 	font-family: 'Bai Jamjuree', sans-serif;
-	height: 100vh;
-	margin: 120px 10%;
+	margin: 120px 0;
 	display: flex;
 	background-color: var(--brownbg);
 }
@@ -37,47 +36,14 @@ body{
 	color: white;
 }
 
-a.catheader{
-	text-decoration: none;
-	background-color: var(--brown);
-	color: white;
-	display: inline-block;
-	width: 40pt;
-	height: 40pt;
-	text-align: center;
-	line-height: 40pt;
-}
-a.cataddheader{
-	color: white;
-	text-decoration: none;
-	vertical-align: middle;
-	font-size: 30pt;
-	line-height: 40pt;
-	margin: 0 5pt 0 5pt;
-}
-a.catdelete{
-	background-color: red;
-	text-align: center;
-	text-decoration: none;
-	border-radius: 5pt;
-	width: 100pt;
-	height: 20pt;
-	line-height: 20pt;
-	color: white;
-	float: right;
-}
-a.catdelete:hover{
-	background-color: darkred;
-	width: 98pt;
-	height: 18pt;
-	line-height: 18pt;
-	font-weight: bolder;
-	border: outset 1pt white;
-}
-.tablecat{
+/* BuyTransfer */
+.whitebg{
 	/* margin: 80pt 10% 0 10%; */
-	width: 100%;
-	background-color: white;
+	width: 80%;
+	padding: 5%;
+	box-shadow: 5px 5px 5px gray;
+	background: rgba(255,255,255,0.8);
+	position: relative;
 }
 .imgproduct{
 	width: 60pt;
@@ -85,36 +51,118 @@ a.catdelete:hover{
 	border-radius: 60pt;
 	background-color: black;
 }
-.btnsubmit{
-font-family: 'Bai Jamjuree', sans-serif;
-	background-color: var(--green);
-	height: 20pt;
-	width: 50pt;
-	border-radius: 5pt;
-	text-align: center;
-	color: white;
+
+/* overlay detail */
+.container{
+	width: 80%;
+}
+.checked{
+	position: relative;
+	background-color: white;
+	width: 50%;
+	height: 80%;
+	cursor: default;
+	flex-flow: column;
+}
+.checked iframe{
+	width: 100%;
+	height: 100%;
 	border: none;
-	float: right;
+}
+#overlayaddslip, #overlaydetail {
+  position: fixed;
+  visibility: hidden;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(0,0,0,0.5);
+  z-index: 2;
+  cursor: pointer;
+}
+
+#detaildata{
+	font-size: 10pt;
+	text-decoration: underline;
 	cursor: pointer;
 }
-.btnsubmit:hover{
-	background-color: darkgreen;
-	width: 50pt;
-	height: 20pt;
-	line-height: 20pt;
-	font-weight: bolder;
-	border: outset 1pt white;
+.tabledetail{
+	width: 80%;
+	margin: 20px auto;
 }
-.sep>td{
-	border: 4pt solid var(--brown);
-	padding: 5%;
+.tabledetail:first-child{
+	width: 20px;
+}
+hr {
+  border: 0;
+  display: block;
+  background-color: gray;
+  height: 2px;
 }
 </style>
+<script type="text/javascript">
+function ondetail() {
+	document.getElementById("overlaydetail").style.visibility = "visible";
+}
+function offdetail() {
+	document.getElementById("overlaydetail").style.visibility = "hidden";
+}
+function onaddslip() {
+	document.getElementById("overlayaddslip").style.visibility = "visible";
+}
+function offaddslip() {
+	document.getElementById("overlayaddslip").style.visibility = "hidden";
+}
+</script>
 </head>
 
-<body>
-
-	Buyer Transfer Checking
-
+<body class="center">
+	<div class="whitebg">
+		<table style="width: 100%;">
+			<tr>
+				<td style="width: 20%;">
+					<div class="imgproduct"></div>
+				</td>
+				<td style="width: 60%;">
+					ออร์เดอร์ <div></div>
+					<a onclick="ondetail()" id="detaildata">รายละเอียด</a><br><br>
+					สั่งเมื่อ <div></div>
+				</td>
+				<td style="width: 20%;">
+					<a onclick="onaddslip()" id="detaildata">เพิ่มรูปสลิป</a>
+				</td>
+			</tr>
+		</table>
+	</div>
+<div class="center" id="overlaydetail" onclick="offdetail()">
+		<div class="checked">
+			<div style="position: absolute; left: 0; top: 0;">รหัส order</div>
+			<table class="tabledetail">
+				<tr>
+					<td style="text-align: center;" colspan="3">รายการคำสั่งซื้อ </td>
+				</tr>
+				<tr>
+					<td colspan="3"><hr></td>
+				</tr>
+				<tr>
+					<td>รูป </td>
+					<td>จำนวน</td>
+					<td>ราคา</td>
+				</tr>
+				<tr>
+					<td colspan="3"><hr></td>
+				</tr>
+				<tr>
+					<td>ยอดรวม </td>
+					<td></td>
+				</tr>
+			</table>
+		</div>
+	</div>
+	<div class="center" id="overlayaddslip" onclick="offaddslip()">
+		<div class="checked">
+			<iframe src="addslip.html"></iframe>
+		</div>
+	</div>
 </body>
 </html>
