--- a/src/main/resources/templates/transfercancel.html
+++ b/src/main/resources/templates/transfercancel.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
+
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
 <title>ร้านขายของน้องหมา </title>
 <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@300;400&display=swap" rel="stylesheet">
-<style>
+<style type="text/css">
+/* Color Variables */
 :root {
   --brown: #cbaf87;
   --x: #c7b198;
-  --brownbg: #f4ebc1;
-  --browntab: #e8cca3;
-  --green: #79d70f;
-  --grey: #707070;
+  --brown2: #f4ebc1;
 }
 
 body{
 	font-family: 'Bai Jamjuree', sans-serif;
-	height: 100vh;
-	margin: 0;
+	/*height: 100vh;*/
 	display: flex;
-	background-color: var(--brownbg);
+	background-color: var(--brown2);
+	color: gray;
 }
 
 .center{
@@ -28,8 +27,111 @@ body{
 	justify-content: center;
 }
 
-.back{
+
+.sellerheader{
 	position: fixed;
+	top: 0;
+	left: 0;
+	background-color: var(--brown);
+	color: white;
+	font-size: 20pt;
+	height: 60px;
+	width: 100%;
+	box-shadow: 2px 2px 5px gray;
+}
+details {
+	margin-top: 60px;
+	width: 100%;
+	border: 2px gray solid;
+}
+summary{
+	background-color: #e7d39f;
+	height: 30pt;
+	display: flex;
+	align-items: center;
+	padding-left: 2%;
+}
+.tableheader{
+	background-color: #e4e4e4;
+}
+.maintable{
+	background-color: gray;
+	width: 100%;
+}
+.maintable tr, .maintable td {
+	background-color: var(--brown2);
+}
+
+.btncheck{
+	background-color: #79d70f;
+	color: white;
+	width: 60pt;
+	height: 22pt;
+	border: none;
+	border-radius: 22px;
+	box-shadow: 2px 2px 5px gray;
+	cursor: pointer;
+}
+
+.checked{
+	position: relative;
+	background-color: white;
+	width: 50%;
+	height: 80%;
+	cursor: default;
+	flex-flow: column;
+}
+.checked iframe{
+	width: 100%;
+	height: 100%;
+	border: none;
+}
+#overlay, #overlaydetail {
+  position: fixed;
+  visibility: hidden;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(0,0,0,0.5);
+  z-index: 2;
+  cursor: pointer;
+}
+.overlayheader{
+	position: absolute;
+	top: 0;
+	left: 0;
+	font-size: 16pt;
+	text-align: center;
+	padding: 2% 0 2% 0;
+	width: 100%;
+	background-color: var(--brown);
+	color: white;
+	box-shadow: 2px 2px 2px gray;
+}
+.overlayconfirm{
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	font-size: 16pt;
+	text-align: center;
+	padding: 2% 0 2% 0;
+	width: 100%;
+	background-color:  #79d70f;
+	border: none;
+	color: white;
+	box-shadow: 2px -2px 2px gray;
+}
+#detaildata{
+	position: absolute;
+	font-size: 10pt;
+	right: 2%;
+	bottom: 2%;
+	text-decoration: underline;
+	cursor: pointer;
+}
+.back{
+	position: absolute;
 	top: 0;
 	left: 10pt;
 	text-decoration: none;
@@ -37,9 +139,53 @@ body{
 	color: white;
 }
 </style>
+<script>
+function ondetail() {
+  document.getElementById("overlaydetail").style.visibility = "visible";
+}
 
+function offdetail() {
+  document.getElementById("overlaydetail").style.visibility = "hidden";
+}
+</script>
 </head>
 <body>
-	Cancel Page coming soon...
+<!-- 
+	<div class="sellerheader center">จัดส่งแล้ว </div>
+	<a href="/firstpage" class="back"><</a>
+	<!-- List order from database -->
+	<div class="center" id="overlaydetail" onclick="offdetail()">
+		<div class="checked center">
+			<div class="overlayheader center">รายละเอียดเพิ่มเติม </div>
+		</div>
+	</div>
+	<details>
+		<summary>กันยายน 2563</summary>
+		<table class="maintable">
+		<tr class="tableheader">
+			<th style="height:30pt; width: 10%" > รหัสสั่งซื้อ </th>
+			<th style="height:30pt; width: 20%" > ชื่อผู้ซื้อ </th>
+			<th style="height:30pt; width: 50%">  รายการ </th>
+			<th style="height:30pt; width: 10%" > ช่องทางติดต่อ </th>
+			<th style="height:30pt; width: 10%" > ติดต่อแล้ว </th>
+		</tr>
+		<tr th:each="userorder: ${userorders}">
+			<td th:text="${'#'+ userorder.getIdOrder()}"></td>
+			<td th:text="${userorder.getUserprofile().getName()}"></td>
+			<td style="position: relative;" >
+				<ul>
+					<li th:each="orderlist: ${orderlists}" th:if="${orderlist.getIdOrder()==userorder.getIdOrder()}"> 
+						<span th:text="${orderlist.getProductdetail().getNameProduct()}"></span>
+						<span th:text="${' x'+ orderlist.getNumber()}"></span>
+			  		</li>
+				</ul>
+				<a onclick="ondetail()" id="detaildata">รายละเอียดเพิ่มเติม </a>
+			<td>ช่องทางติดต่อผู้ซื้อ</td>
+			<td style="flex-flow: column;" class="center">
+				<input type="checkbox">
+			</td>
+		</tr>
+		</table>
+	</details> -->
 </body>
 </html>
