--- a/src/main/resources/templates/buytransfer.html
+++ b/src/main/resources/templates/buytransfer.html
@@ -69,15 +69,15 @@ body{
 	height: 100%;
 	border: none;
 }
-#overlayaddslip, #overlaydetail {
-  position: fixed;
+#overlay, #overlaydetail {
+  position: absolute;
   visibility: hidden;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
   background-color: rgba(0,0,0,0.5);
-  z-index: 2;
+  z-index: 9999;
   cursor: pointer;
 }
 
@@ -108,10 +108,10 @@ function offdetail() {
 	document.getElementById("overlaydetail").style.visibility = "hidden";
 }
 function onaddslip() {
-	document.getElementById("overlayaddslip").style.visibility = "visible";
+	document.getElementById("overlay").style.visibility = "visible";
 }
 function offaddslip() {
-	document.getElementById("overlayaddslip").style.visibility = "hidden";
+	document.getElementById("overlay").style.visibility = "hidden";
 }
 </script>
 </head>
@@ -134,6 +134,7 @@ function offaddslip() {
 			</tr>
 		</table>
 	</div>
+	
 <div class="center" id="overlaydetail" onclick="offdetail()">
 		<div class="checked">
 			<div style="position: absolute; left: 0; top: 0;">รหัส order</div>
@@ -159,7 +160,8 @@ function offaddslip() {
 			</table>
 		</div>
 	</div>
-	<div class="center" id="overlayaddslip" onclick="offaddslip()">
+	
+	<div class="center" id="overlay" onclick="offaddslip()">
 		<div class="checked">
 			<iframe src="addslip.html"></iframe>
 		</div>
